--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.15.8",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "bignumber.js": "^9.1.1",
     "decimal.js-light": "^2.5.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
